minor changes to formatting

--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 \usepackage[utf8]{inputenc}
 
 
-\usepackage[a4paper, total={6in, 9in}]{geometry}
+\usepackage[a4paper, total={6.5in, 9in}]{geometry}
 
 % remove page numbering
 \pagestyle{empty}
@@ -18,7 +18,7 @@
 \renewcommand\labelitemi{--}
 
 % define new commands
-\newcommand{\name}[1]{\begin{center}\huge\textbf{#1}\end{center}\vspace{1em}}
+\newcommand{\name}[1]{\begin{center}\huge\textbf{#1}\end{center}\vspace{2em}}
 \newcommand{\personal}[4]{
 	\noindent#1\hfill#3\\
 	#2\hfill#4
@@ -77,7 +77,7 @@ On a team of four, I conducted research on the dynamics of pattern formation in 
 
 \section*{Publications}
 \newitem{Invasion Fronts and Pattern Formation in a Model of Chemotaxis in One and Two Dimensions}{}
-SIAM Undergraduate Research Online (2013)
+Bose, K., Cox, T., Silvestri, S., and Varin, P. (2013). Invasion fronts and pattern formation in a model of chemotaxis in one and two dimensions. SIAM Undergrad. Res. Online, 6, 228-245.
 
 \section*{Notable Projects}
 \newitem{Senior Capstone in Engineering: Project Manager}{2013-2014}
