final edits, for now

--- a/main.tex
+++ b/main.tex
@@ -58,18 +58,18 @@ I am conducting research on algorithms for control and estimation in the presenc
 \newitem{Facebook: Product Manager}{2014-2016}
 I led teams of 8-17 engineers, marketers, designers, and data analysts at Facebook.
 \begin{itemize}
-\item Built the machine learning backend for notifications resulting in 40\% increase in click-through rate.
-\item Grew Facebook commerce groups--now larger than Craigslist--part of Facebook's core strategy.
-\item Re-architected Facebook NewsFeed, increasing engagement on low performance Android phones by 30\%.
+\item We built the machine learning backend for notifications resulting in 40\% increase in click-through rate.
+\item We grew Facebook commerce groups--now larger than Craigslist--part of Facebook's core strategy.
+\item We re-architected Facebook NewsFeed, increasing engagement on low performance Android phones by 30\%.
 \end{itemize}
 \gimmespace
 
 \newitem{Olin College of Engineering: Teacher's Assistant}{2011-2014}
-I have been a teachers assistant for courses such as \emph{Modeling and Control of the Physical World}, \emph{Linear Algebra}, \emph{Differential Equations}, \emph{Partial Differential Equations}, \emph{Signals and Systems}, and \emph{Robotics}. My responsibilities included giving supplemental lectures, grading papers, holding office hours, and designing exams.
+I have been a teacher's assistant for courses such as \emph{Modeling and Control of the Physical World}, \emph{Linear Algebra}, \emph{Differential Equations}, \emph{Partial Differential Equations}, \emph{Signals and Systems}, and \emph{Robotics}. My responsibilities included giving supplemental lectures, grading papers, holding office hours, and designing exams.
 \gimmespace
 
 \newitem{University of Notre Dame: Research in Medical Robotics}{Summer 2013}
-I worked on a team developing a hyper-realistic robotic manikin capable of speech and facial expression, intended for used in medical training. I was personally responsible for the software and electronics.
+I worked on a team developing a hyper-realistic robotic mannequin capable of speech and facial expression, intended for used in medical training. I was personally responsible for the software and electronics.
 \gimmespace
 
 \newitem{University of Minnesota: Research in Dynamics of Pattern Formation}{Summer 2012}
@@ -85,5 +85,5 @@ I led a team of five Olin seniors in partnership with Analogic Corp. to develop 
 \gimmespace
 
 \newitem{Baja Society of Automotive Engineers: Electrical Team Leader}{2013-2014}
-I recruited and led a team of 12 undergraduate electrical and computer engineering students to design and build the software and sensor suite for an off-road vehicle. This data was critical in the design of the car as well as providing the driver with real time diagnostic data.
+I recruited and led a team of 12 undergraduate electrical and computer engineering students to design and build the software and sensor suite for an off-road vehicle. This data was critical in the design of the car as well as providing the driver with real time diagnostics.
 \end{document}
