changing PhD candidate to PhD student until I pass my quals

--- a/main.tex
+++ b/main.tex
@@ -40,13 +40,13 @@
 \noindent My goal is to bring state-of-the-art robotics research to consumer and industrial applications by designing efficient algorithms for robust control, state estimation, and filtering.
 
 \section*{Education}
-\newitem{Harvard University: Doctoral Candidate}{2016-Present}
-Degree: Candidate for Ph.D. in Computer Science\\
+\newitem{Harvard University}{2016-Present}
+Computer Science Ph.D Student\\
 GPA: 3.83
 \gimmespace
 
 \newitem{Franklin W. Olin College of Engineering}{2010-2014}
-Degree: B.S. Engineering with a concentration in Robotics\\
+B.S. Engineering with a concentration in Robotics\\
 GPA: 3.80
 
 \section*{Experience}
