clarifications and spelling edit

--- a/main.tex
+++ b/main.tex
@@ -42,6 +42,7 @@
 \section*{Education}
 \newitem{Harvard University}{2016-Present}
 Computer Science Ph.D Student\\
+2017 Smith Fellow\\
 GPA: 3.83
 \gimmespace
 
@@ -58,7 +59,7 @@ I am conducting research on algorithms for control and estimation in the presenc
 \newitem{Facebook: Product Manager}{2014-2016}
 I led teams of 8-17 engineers, marketers, designers, and data analysts at Facebook.
 \begin{itemize}
-\item We built the machine learning backend for notifications resulting in 40\% increase in click-through rate.
+\item We built the machine learning backend for notifications resulting in 10\% increase in click-through rate for push notifications and 40\% increase in click-through rate for email notifications.
 \item We grew Facebook commerce groups--now larger than Craigslist--part of Facebook's core strategy.
 \item We re-architected Facebook NewsFeed, increasing engagement on low performance Android phones by 30\%.
 \end{itemize}
@@ -69,7 +70,7 @@ I have been a teacher's assistant for courses such as \emph{Modeling and Control
 \gimmespace
 
 \newitem{University of Notre Dame: Research in Medical Robotics}{Summer 2013}
-I worked on a team developing a hyper-realistic robotic mannequin capable of speech and facial expression, intended for used in medical training. I was personally responsible for the software and electronics.
+I worked on a team developing a hyper-realistic robotic mannequin capable of speech and facial expression, intended for use in medical training. I was personally responsible for the software and electronics.
 \gimmespace
 
 \newitem{University of Minnesota: Research in Dynamics of Pattern Formation}{Summer 2012}
